  in Lucenes IndexWriter. The interface is not sufficient to efficiently
  replace the functionality with reasonable efforts. (Simon Willnauer)

* LUCENE-9317 LUCENE-9318 LUCENE-9319 LUCENE-9558 LUCENE-9600 : Clean up package name conflicts
  between modules. See MIGRATE.md for details. (David Ryan, Tomoko Uchida, Uwe Schindler, Dawid Weiss)

Improvements

* LUCENE-9633: Improve match highlighter behavior for degenerate intervals (on non-existing positions).
  (Dawid Weiss)

* LUCENE-9618: Do not call IntervalIterator.nextInterval after NO_MORE_DOCS is returned. (Haoyu Zhai)

* LUCENE-9576: Improve ConcurrentMergeScheduler settings by default, assuming modern I/O.
  Previously Lucene was too conservative, jumping through hoops to detect if disks were SSD-backed.
  In many common modern cases (VMs, RAID arrays, containers, encrypted mounts, non-Linux OS),
  the pessimistic heuristics were wrong, resulting in slower indexing performance. Heuristics were
  also complex and would trigger JDK issues even on unrelated mount points. Merge scheduler defaults
  are now modernized and the heuristics removed. Users with spinning disks that want to maximize I/O
  performance should tweak ConcurrentMergeScheduler. (Robert Muir)

* LUCENE-9463: Query match region retrieval component, passage scoring and formatting
  for building custom highlighters. (Alan Woodward, Dawid Weiss)

* LUCENE-9370: RegExp query is no longer lenient about inappropriate backslashes and
  follows the Java Pattern policy for rejecting illegal syntax.  (Mark Harwood)

* LUCENE-9336: RegExp query now supports \w \W \d \D \s \S expressions.
  This is a break with previous behaviour where these were (mis)interpreted
  as literally the characters w W d etc. (Mark Harwood)

* LUCENE-8757: When provided with an ExecutorService to run queries across
  multiple threads, IndexSearcher now groups small segments together, up to
  250k docs per slice. (Atri Sharma via Adrien Grand)
